# IPCA

Templates Estágio/: Regras.txt  Relatório Estágio Pedro Ferreira.docx  Relatório_de_Estágio_Diogo_Miguel_Oliveira_190288006.docx  _Exemplo Apresentação Estágio EAC.pptx  _Exemplo Template Relatório Estágio.docx  _IPCA - Guia Geral Elaboração Relatórios.docx  ~$xemplo Template Relatório Estágio.docx  ~WRL3800.tmp
proj-visao-2024/: README.md
proj-visao-2024/VISAO_COMP/: CMakeLists.txt
